--- a/part-3/index.html
+++ b/part-3/index.html
@@ -6,12 +6,18 @@
 </head>
 <body>
   <div class="container">
-    <div class="nav-parent">
+    <header class="main-header">
+      <a href='#'>Filetube      ...</a>
+      <button>Logout</button>
+    </header>
+    <!-- <div class="nav-parent">
       <nav class="nav-bar">
-        <h4>Filetube    ...</h4>
+        <h3 class="name">
+          <a href='#'>Filetube      ...</a>
+        </h3>
         <button>Logout</button>
       </nav>
-    </div>
+    </div> -->
     <div class="cat-parent">
       <div class="categories">
         <h1>Categories</h1>
