header no longer showing text from main section

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -11,7 +11,7 @@
       <button>Logout</button>
     </header>
   </div>
-  <div class="cat-parent">
+  <div class="afterHeader">
     <div class="categories">
       <h1>Categories</h1>
       <ul>
@@ -21,9 +21,8 @@
         <li class="sci-fi">Sci-Fi</li>
       <ul>
     </div>
-  </div>
-  <div class="main-content">
     <div class="allmovies">
+      <h1>Movies</h1>
       <ul id="drama">
         <h1>Drama</h1>
         <button>Play</button>
