scrolling working on movie div

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -12,17 +12,22 @@
     </header>
   </div>
   <div class="afterHeader">
-    <div class="categories">
+    <div class="header-wrapper">
+      <div class="cat-header">
       <h1>Categories</h1>
-      <ul>
-        <li class="drama">Drama</li>
-        <li class="romance">Romance</li>
-        <li class="action">Action</li>
-        <li class="sci-fi">Sci-Fi</li>
-      <ul>
+      </div>
+      <div class="categories">
+
+          <ul>
+            <li class="drama">Drama</li>
+            <li class="romance">Romance</li>
+            <li class="action">Action</li>
+            <li class="sci-fi">Sci-Fi</li>
+          </ul>
+      </div>
     </div>
     <div class="allmovies">
-      <h1>Movies</h1>
+      <h1 class="allmoviesHeader">Movies</h1>
       <ul id="drama">
         <h1>Drama</h1>
         <button>Play</button>
