formatted video section.

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -25,78 +25,102 @@
     </div>
     <div class="allmovies">
       <h1 class="allmoviesHeader">Movies</h1>
-      <ul id="drama">
         <h1>Drama</h1>
-        <button>Play</button>
-        <div class="movie-info1">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info2">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info3">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-      </ul>
-      <ul id="romance">
+        <div id="drama">
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+      </div>
+      <div id="romance">
         <h1>Romance</h1>
-        <button>Play</button>
-        <div class="movie-info1">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info2">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info3">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-      </ul>
-      <ul id="action">
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+      </div>
+      <div id="action">
         <h1>Action</h1>
-        <button>Play</button>
-        <div class="movie-info1">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info2">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info3">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-      </ul>
-      <ul id="sci-fi">
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+      </div>
+      <div id="sci-fi">
         <h1>Sci-Fi</h1>
-        <button>Play</button>
-        <div class="movie-info1">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info2">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-        <button>Play</button>
-        <div class="movie-info3">
-          <span>Movie name</span>
-          <span>1:33:21</span>
-        </div>
-      </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li>
+            <button>Play</button>
+          </li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+      </div>
     </div>
   </div>
 </body>
