action section linked.

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -16,10 +16,18 @@
       <div class="categories">
         <h1>Categories</h1>
           <ul>
-            <li class="drama">Drama</li>
-            <li class="romance">Romance</li>
-            <li class="action">Action</li>
-            <li class="sci-fi">Sci-Fi</li>
+            <li class="drama">
+              <a href="#">Drama</a>
+            </li>
+            <li class="romance">
+              <a href="#">Romance</a>
+            </li>
+            <li class="action">
+              <a href="#Action">Action</a>
+            </li>
+            <li class="sci-fi">
+              <a href="#">Sci-Fi</a>
+            </li>
           </ul>
       </div>
     </div>
@@ -73,29 +81,32 @@
           <li class="time">1:33:21</li>
         </ul>
       </div>
+
       <div id="action">
-        <h1>Action</h1>
-        <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
-          <li class="movie-name">Movie name</li>
-          <li class="time">1:33:21</li>
-        </ul>
-        <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
-          <li class="movie-name">Movie name</li>
-          <li class="time">1:33:21</li>
-        </ul>
-        <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
-          <li class="movie-name">Movie name</li>
-          <li class="time">1:33:21</li>
-        </ul>
+        <a name="Action">
+          <h1>Action</h1>
+          <ul class="movie-info">
+            <li>
+              <button>Play</button>
+            </li>
+            <li class="movie-name">Movie name</li>
+            <li class="time">1:33:21</li>
+          </ul>
+          <ul class="movie-info">
+            <li>
+              <button>Play</button>
+            </li>
+            <li class="movie-name">Movie name</li>
+            <li class="time">1:33:21</li>
+          </ul>
+          <ul class="movie-info">
+            <li>
+              <button>Play</button>
+            </li>
+            <li class="movie-name">Movie name</li>
+            <li class="time">1:33:21</li>
+          </ul>
+        </a>
       </div>
       <div id="sci-fi">
         <h1>Sci-Fi</h1>
