all sections linked.

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -17,23 +17,25 @@
         <h1>Categories</h1>
           <ul>
             <li class="drama">
-              <a href="#">Drama</a>
+              <a href="#Drama">Drama</a>
             </li>
             <li class="romance">
-              <a href="#">Romance</a>
+              <a href="#Romance">Romance</a>
             </li>
             <li class="action">
               <a href="#Action">Action</a>
             </li>
             <li class="sci-fi">
-              <a href="#">Sci-Fi</a>
+              <a href="#Sci-Fi">Sci-Fi</a>
             </li>
           </ul>
       </div>
     </div>
     <div class="allmovies">
       <h1 class="allmoviesHeader">Movies</h1>
+      <a name="Drama">
         <h1>Drama</h1>
+      </a>
         <div id="drama">
         <ul class="movie-info">
           <li>
@@ -58,7 +60,9 @@
         </ul>
       </div>
       <div id="romance">
-        <h1>Romance</h1>
+        <a name="Romance">
+          <h1>Romance</h1>
+        </a>
         <ul class="movie-info">
           <li>
             <button>Play</button>
@@ -82,9 +86,10 @@
         </ul>
       </div>
 
-      <div id="action">
-        <a name="Action">
-          <h1>Action</h1>
+         <div id="action">
+          <a name="Action">
+            <h1>Action</h1>
+          </a>
           <ul class="movie-info">
             <li>
               <button>Play</button>
@@ -106,10 +111,12 @@
             <li class="movie-name">Movie name</li>
             <li class="time">1:33:21</li>
           </ul>
-        </a>
+
       </div>
       <div id="sci-fi">
-        <h1>Sci-Fi</h1>
+        <a name="Sci-Fi">
+          <h1>Sci-Fi</h1>
+        </a>
         <ul class="movie-info">
           <li>
             <button>Play</button>
