code clean up html.

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -15,20 +15,20 @@
     <div class="header-wrapper">
       <div class="categories">
         <h1>Categories</h1>
-          <ul>
-            <li class="drama">
-              <a href="#Drama">Drama</a>
-            </li>
-            <li class="romance">
-              <a href="#Romance">Romance</a>
-            </li>
-            <li class="action">
-              <a href="#Action">Action</a>
-            </li>
-            <li class="sci-fi">
-              <a href="#Sci-Fi">Sci-Fi</a>
-            </li>
-          </ul>
+        <ul>
+          <li class="drama">
+            <a href="#Drama">Drama</a>
+          </li>
+          <li class="romance">
+            <a href="#Romance">Romance</a>
+          </li>
+          <li class="action">
+            <a href="#Action">Action</a>
+          </li>
+          <li class="sci-fi">
+            <a href="#Sci-Fi">Sci-Fi</a>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="allmovies">
@@ -36,25 +36,19 @@
       <a name="Drama">
         <h1>Drama</h1>
       </a>
-        <div id="drama">
+      <div id="drama">
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
@@ -64,77 +58,57 @@
           <h1>Romance</h1>
         </a>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
       </div>
-
-         <div id="action">
-          <a name="Action">
-            <h1>Action</h1>
-          </a>
-          <ul class="movie-info">
-            <li>
-              <button>Play</button>
-            </li>
-            <li class="movie-name">Movie name</li>
-            <li class="time">1:33:21</li>
-          </ul>
-          <ul class="movie-info">
-            <li>
-              <button>Play</button>
-            </li>
-            <li class="movie-name">Movie name</li>
-            <li class="time">1:33:21</li>
-          </ul>
-          <ul class="movie-info">
-            <li>
-              <button>Play</button>
-            </li>
-            <li class="movie-name">Movie name</li>
-            <li class="time">1:33:21</li>
-          </ul>
-
+      <div id="action">
+        <a name="Action">
+          <h1>Action</h1>
+        </a>
+        <ul class="movie-info">
+          <li><button>Play</button></li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li><button>Play</button></li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
+        <ul class="movie-info">
+          <li><button>Play</button></li>
+          <li class="movie-name">Movie name</li>
+          <li class="time">1:33:21</li>
+        </ul>
       </div>
       <div id="sci-fi">
         <a name="Sci-Fi">
           <h1>Sci-Fi</h1>
         </a>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
         <ul class="movie-info">
-          <li>
-            <button>Play</button>
-          </li>
+          <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
           <li class="time">1:33:21</li>
         </ul>
