--- a/part-3/index.html
+++ b/part-3/index.html
@@ -33,10 +33,10 @@
     </div>
     <div class="allmovies">
       <h1 class="allmoviesHeader">Movies</h1>
-      <a name="Drama">
-        <h1>Drama</h1>
-      </a>
       <div id="drama">
+        <a class="eachMovie-genre drama-anchor" name="Drama">
+          <h1>Drama</h1>
+        </a>
         <ul class="movie-info">
           <li><button>Play</button></li>
           <li class="movie-name">Movie name</li>
@@ -54,7 +54,7 @@
         </ul>
       </div>
       <div id="romance">
-        <a name="Romance">
+        <a class="eachMovie-genre" name="Romance">
           <h1>Romance</h1>
         </a>
         <ul class="movie-info">
@@ -74,7 +74,7 @@
         </ul>
       </div>
       <div id="action">
-        <a name="Action">
+        <a class="eachMovie-genre" name="Action">
           <h1>Action</h1>
         </a>
         <ul class="movie-info">
@@ -94,7 +94,7 @@
         </ul>
       </div>
       <div id="sci-fi">
-        <a name="Sci-Fi">
+        <a class="eachMovie-genre" name="Sci-Fi">
           <h1>Sci-Fi</h1>
         </a>
         <ul class="movie-info">
